[project]
name = "janestreet-puzzle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle>=3.1.1",
    "huggingface-hub>=0.30.1",
    "jupyter>=1.1.1",
    "nnsight>=0.4.5",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
